--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的测试网页</title>
+    <title>你的页面标题</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Hello! 静态网页测试</h1>
-        <p>这是用于帽子云部署的测试页面 🚀</p>
-        <button id="clickBtn">点击我看看效果</button>
-    </div>
+    <!-- 页面内容 -->
     <script src="script.js"></script>
 </body>
 </html>
