--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- 页面内容 -->
+    <h1>Hello, World!</h1>
+    <p>这是我的第一个网页。</p>
     <script src="script.js"></script>
 </body>
 </html>
